openshift/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-ui
  labels:
    app: frontend-ui
    lab: kubernetes-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-ui
  template:
    metadata:
      labels:
        app: frontend-ui
        lab: kubernetes-lab
    spec:
      containers:
      - name: frontend-ui
        image: rafabene/microservices-frontend:1.0
        ports:
        - name: http
          containerPort: 8080
