openshift/helloworldservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-service-vertx
  labels:
    app: helloworld-service-vertx
    lab: kubernetes-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloworld-service-vertx
  template:
    metadata:
      labels:
        app: helloworld-service-vertx
        lab: kubernetes-lab
    spec:
      containers:
      - name: helloworld-service-vertx
        image: rafabene/microservices-helloworld-vertx:1.0
        ports:
        - name: http
          containerPort: 8080
