openshift/guestbookservice-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: guestbook-service
  labels:
    app: guestbook-service
    lab: kubernetes-lab
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: guestbook-service
